--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/f7b7c37647.js" crossorigin="anonymous"></script>
 </head>
-<body>
-
+<body class="bg-slate-300 m-0">
+    <nav class="w-full pl-36 pr-64  h-[102px] flex justify-between items-center bg-slate-200">
+        <div class="bg-slate-300">
+            <img src="/assets/Icons/logo.svg" alt="logo">
+        </div>
+        <ul class="flex gap-14 text-[rgba(51,51,51,0.50)] bg-slate-500">
+            <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href=""></a>ГЛАВНАЯ</li>
+            <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href=""></a>ГАЛЕРЕЯ</li>
+            <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href="">ПРОЕКТЫ</a></li>
+            <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href=""></a>СЕРТИФИКАТЫ</li>
+            <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href=""></a>КОНТАКТЫ</li>
+        </ul>
+    </nav>
 </body>
 </html>
