--- a/assets/index4.html
+++ b/assets/index4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architects Website</title>
+    <title>Page-4</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/f7b7c37647.js" crossorigin="anonymous"></script>
 </head>
