--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <script src="https://kit.fontawesome.com/f7b7c37647.js" crossorigin="anonymous"></script>
 </head>
 <body">
-    <nav class="w-full pl-36 pr-64 h-[102px] flex justify-between items-center sm:p-4 sm:h-16 sm:bg-slate-300">
+    <nav class="w-full flex justify-between items-center bg-slate-300">
 
         <div>
             <img src="/assets/Icons/logo.svg" alt="logo">
         </div>
         
-        <ul class="flex gap-14 text-[rgba(51,51,51,0.50)] sm:gap- sm:text-sm">
+        <ul class="flex text-[rgba(51,51,51,0.50)]">
             <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href="./index.html" target="_blank">ГЛАВНАЯ</a></li>
             
             <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href="./index1.html" target="_blank">ГАЛЕРЕЯ</a></li>
