feat: nav-responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav class="bg-slate-300">
 
-        <div class="container mx-auto px-4 py-2 flex justify-between items-center">
+        <div class="container mx-auto px-8 py-3 sm:px-4 md:px-7 lg:max-md:px-11 xl:max-2xl:pl-32 xl:max-2xl:pr-64 sm:h-24 flex justify-between items-center">
 
         <div>
             <img src="/assets/Icons/logo.svg" alt="logo">
@@ -25,7 +25,7 @@
         </button>
       </div>
         
-        <ul class="hidden sm:flex space-x-4 text-[rgba(51,51,51,0.50)]">
+        <ul class="hidden sm:flex sm:space-x-3 md:space-x-6 lg:max-2xl:space-x-10 text-[rgba(51,51,51,0.50)]">
             <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href="./index.html" target="_blank">ГЛАВНАЯ</a></li>
             
             <li class="hover:border-y-2 hover:border-[rgba(51,51,51,0.50)] hover:cursor-pointer"><a href="./index1.html" target="_blank">ГАЛЕРЕЯ</a></li>
