feat: main img-div

--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
 
     </nav>
 
+<!-- page-1 -->
+    <div class="container mx-auto p-4"> 
+
+      <div class="flex flex-col sm:flex-row items-center"> 
+       
+        <div class="text-center sm:text-right sm:mr-4 mt-4 sm:mt-0"> 
+          <h1 class="text-left text-xl sm:text-3xl lg:text-6xl font-bold text-[rgba(189,189,189,1)]">PROJECT</h1> 
+          <h1 class="text-base sm:text-4xl lg:text-7xl font-bold text-[rgba(51,51,51,1)]">NURTOWN</h1> 
+        </div> 
+        <img src="/assets/Images/big-image.png" alt="Responsive Image" class="w-full sm:w-1/2 h-auto"> 
+      </div> 
+    </div>
+
     <script>
         document.getElementById('menuButton').addEventListener('click', function() {
         const menu = document.getElementById('mobileMenu');
