--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <nav class="bg-slate-300">
 
-    <div class="mx-auto px-8 py-3 sm:py-0 sm:px-8 md:px-16 lg:px-24 xl:pl-32 xl:pr-64 sm:h-20 xl:h-24 flex justify-between items-center">
+    <div class="mx-auto px-8 py-5 sm:py-0 sm:px-8 md:px-16 lg:px-24 xl:pl-32 xl:pr-64 sm:h-20 xl:h-24 flex justify-between items-center">
 
       <div>
           <img src="/assets/Icons/logo.svg" alt="logo">
@@ -53,21 +53,18 @@
 
   </nav>
 
-<!-- page-1 -->
-    <div class="mx-auto bg-pink-300"> 
-
-      <div class="flex flex-col sm:flex-row items-center"> 
+<!-- page-1 --> 
+ <!-- section-1 -->
+          <div class="flex flex-col sm:flex-row items-center mx-auto mt-0 bg-purple-400"> 
        
-        <div class="text-center sm:text-right sm:mr-4 mt-4 sm:mt-0"> 
-          <h1 class="text-left text-xl sm:text-3xl lg:text-6xl font-bold text-[rgba(189,189,189,1)]">PROJECT</h1> 
-          <h1 class="text-base sm:text-4xl lg:text-7xl font-bold text-[rgba(51,51,51,1)]">NURTOWN</h1> 
+        <div class="text-center pb-6 pt-2"> 
+          <h1 class="text-left text-3xl font-bold text-[rgba(189,189,189,1)]">PROJECT</h1> 
+          <h1 class="text-3xl font-bold text-[rgba(51,51,51,1)]">NURTOWN</h1> 
         </div>
 
         <img src="/assets/Images/big-image.png" alt="Responsive Image" class="w-full sm:w-1/2 h-auto"> 
 
       </div> 
-
-    </div>
 
     <script>
         document.getElementById('menuButton').addEventListener('click', function() {
