--- a/index.html
+++ b/index.html
@@ -63,16 +63,17 @@
 
       <div class="text-center pb-4 pt-2 text-2xl sm:text-3xl font-bold md:text-4xl lg:text-5xl xl:text-6xl"> 
         <h1 class="text-left text-[rgba(189,189,189,1)]">PROJECT</h1> 
-        <h1 class="text-[rgba(51,51,51,1)]">NURTOWN</h1> 
+        <h1 class="text-left text-[rgba(51,51,51,1)]">NURTOWN</h1> 
       </div>
 
-      <div class="hidden sm:flex sm:pt-9 sm:pb-9 md:pt-14 md:pb-14 lg:pt-20 lg:pb-20 sm:gap-4 xl:gap-5 ">
+      <div class="hidden sm:flex items-center sm:pt-9 sm:pb-9 md:pt-14 md:pb-14 lg:pt-20 lg:pb-20 sm:gap-4 xl:gap-5 ">
         <button class="bg-white w-10 h-10 border flex items-center justify-center">
           <img src="/assets/Icons/arrow-2-left-long.svg" alt="arrow-left" class="w-4">
         </button>
         <button class="bg-slate-50 w-10 h-10 border flex items-center justify-center">
           <img src="/assets/Icons/arrow-2-right-long.svg"  alt="arrow-right" class="w-4">
         </button>
+        <span class="h-2 bg-slate-200"></span>
       </div>
 
       <div class="hidden sm:flex items-center space-x-5 text-lg text-gray-300"> 
@@ -111,6 +112,23 @@
     </div>
     
     <!-- section-2 -->
+     <div class="">
+
+      <div class="grid grid-cols-1">
+        <img src="/assets/Images/img1.png" alt="image1">
+        <img src="/assets/Images/img2.png" alt="image2">
+        <img src="/assets/Images/img3.png" alt="image3">
+        <div>
+          <h1 class="text-6xl">О компании</h1>
+          <p class="w-[390px] h-[200px] font-[300px] bg-slate-100 text-[16px] leading-[25px]">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+          div
+          <span class="w-52 h-16 bg-gray-300 flex justify-center items-center gap-2">
+            <p class="text-xs">ВЗГЛЯНУТЬ</p>
+            <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
+          </span>
+      </div>
+
+    </div>
 
 
 
