--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
     <!-- section-2 -->
     <div class="bg-gray-100 mt-14 pt-8 pb-4 ">
  
-      <div class= "grid grid-cols-1 gap-6 sm:grid-cols-2 sm:grid-rows-2 px-6 sm:gap-4 justify-center items-center">
+      <div class= "grid grid-cols-1 gap-6 px-6 sm:grid-cols-2 sm:grid-rows-2 sm:gap-4 items-center">
 
         <img class="w-full h-auto" src="/assets/Images/img1.png" alt="image1">
-        <img class="w-full h-auto bg-green-200" src="/assets/Images/img2.png" alt="image2">
-        <img class="w-full h-auto" src="/assets/Images/img3.png" alt="image3">
-        <div class="w-full">
-            <h1 class="text-6xl sm:text-5xl">О компании</h1>
-            <p class="md:w-[390px] md:h-[200px] font-[300px] bg-slate-400 text-[16px] leading-[25px] mt-7 mb-7">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+        <img class="w-full h-auto" src="/assets/Images/img2.png" alt="image2">
+        <img class="w-full h-auto sm:h-96 pt-4" src="/assets/Images/img3.png" alt="image3">
+        <div class="w-full h-full py-2 flex flex-col justify-between ">
+            <h1 class="text-6xl sm:text-5xl text-[rgba(189,189,189,1)]">О компании</h1>
+            <p class="md:w-[390px] md:h-[200px] font-light text-base leading-[25px] mt-7 mb-7">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             <span class="w-52 h-16 bg-white flex justify-center items-center gap-2">
               <p class="text-xs">ВЗГЛЯНУТЬ</p>
               <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
