--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
     <!-- section-2 -->
     <div class="bg-gray-100 mt-14 pt-8 pb-4 ">
  
-      <div class= "grid grid-cols-1 gap-6 px-6 sm:grid-cols-7 sm:grid-rows-2 sm:gap-0 items-center">
+      <div class= "grid grid-cols-1 gap-6 px-6 sm:max-lg:grid-cols-7 sm:max-lg:grid-rows-2 sm:max-lg:gap-0 items-center">
 
-        <img class="w-full h-auto sm:col-span-3" src="/assets/Images/img1.png" alt="image1">
-        <img class="w-full h-auto sm:col-start-5 sm:col-span-3" src="/assets/Images/img2.png" alt="image2">
-        <img class="w-full h-auto sm:col-span-3" src="/assets/Images/img3.png" alt="image3">
-        <div class="w-full h-full sm:col-span-4 py-2 flex flex-col justify-between sm:pl-10">
+        <img class="w-full h-auto sm:max-lg:col-span-3" src="/assets/Images/img1.png" alt="image1">
+        <img class="w-full h-auto sm:max-lg:col-start-5 sm:max-lg:col-span-3" src="/assets/Images/img2.png" alt="image2">
+        <img class="w-full h-auto sm:max-lg:col-span-3" src="/assets/Images/img3.png" alt="image3">
+        <div class="w-full h-full sm:max-lg:col-span-4 py-2 flex flex-col justify-between sm:pl-10">
             <h1 class="text-6xl sm:text-5xl text-[rgba(189,189,189,1)]">О компании</h1>
-            <p class="md:w-[390px] md:h-[200px] font-light text-base leading-[25px] mt-7 mb-7">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+            <p class=" font-light text-base leading-[25px] md:text-lg md:leading-loose mt-7 mb-7 md:max-lg:h-3/4 sm:line-clamp-6 md:max-lg:pr-3 md:line-clamp-none">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             <span class="w-52 h-16 bg-white flex justify-center items-center gap-2">
               <p class="text-xs">ВЗГЛЯНУТЬ</p>
               <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
@@ -131,6 +131,7 @@
       </div>
 
     </div>
+    md:w-[390px] md:h-[200px]
 
 
 
