--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
     </div>
     
     <!-- section-2 -->
-    <div class="bg-gray-100 mt-20 pt-8 pb-4 lg:h-[280px] lg:pt-4 lg:ml-24 lg:mr-12 mx-auto">
+    <div class="bg-gray-100 mt-20 pt-5 pb-4 sm:pt-0 sm:pb-0 lg:h-[265px] lg:ml-24 lg:mr-12 xl:w-[1035px] xl:h-[350px] xl:ml-44 mx-auto">
  
-      <div class= "grid grid-cols-1 gap-6 px-6 items-center sm:grid-cols-7 sm:grid-rows-2 sm:max-md:gap-0 lg:grid-cols-4 lg:grid-rows-3 lg:gap-0 lg:gap-x-8 lg:w-[800px] lg:h-[300px] lg:pt-0 lg:pl-16">
+      <div class= "grid grid-cols-1 gap-6 px-6 items-center sm:grid-cols-7 sm:grid-rows-2 sm:max-md:gap-0 lg:grid-cols-4 lg:grid-rows-3 lg:gap-0 lg:gap-x-8 lg:w-[800px] lg:h-[300px] lg:pt-0 lg:pl-16 xl:pl-24 xl:w-[1035px] xl:h-[390px] xl:leading-none">
 
         <img class="w-full h-auto sm:col-span-3 lg:col-span-1 lg:row-span-2" src="/assets/Images/img1.png" alt="image1">
-        <img class="w-full h-auto sm:col-start-5 sm:col-span-3 lg:col-span-1 lg:row-start-3 lg:row" src="/assets/Images/img2.png" alt="image2">
+        <img class="w-full h-auto sm:col-start-5 sm:col-span-3 lg:col-span-1 lg:row-start-3" src="/assets/Images/img2.png" alt="image2">
         <img class="w-full h-auto sm:col-span-3 lg:col-span-1 lg:row-span-3" src="/assets/Images/img3.png" alt="image3">
-        <div class="w-full h-full sm:col-span-4 lg:col-span-2 lg:row-span-3 py-2 flex flex-col sm:justify-between md:justify-start sm:max-lg:pl-10 lg:h-64">
-            <h1 class="text-6xl sm:max-lg:text-5xl text-[rgba(189,189,189,1)]">О компании</h1>
-            <p class=" font-[300px] text-[16px] leading-[25px] md:max-lg:leading-loose mt-7 mb-7 md:mt-4 lg:mt-4 lg:mb-4 md:max-lg:h-3/4 sm:line-clamp-6 md:pr-7 md:line-clamp-none lg:w-[420px] lg:line-clamp-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-            <span class="w-52 h-16 bg-white flex justify-center items-center gap-2">
+        <div class="w-full h-full sm:col-span-4 lg:col-span-2 lg:row-span-3 py-2 xl:py-0 flex flex-col sm:justify-between md:justify-start sm:max-lg:pl-10 lg:h-64 xl:h-80">
+            <h1 class="text-6xl sm:text-5xl text-[rgba(189,189,189,1)]">О компании</h1>
+            <p class=" font-[300px] text-[16px] leading-[25px] md:max-lg:leading-loose mt-7 mb-7 lg:mt-4 lg:max-xl:mb-4 md:max-lg:h-3/4 sm:line-clamp-6 md:pr-7 md:line-clamp-none lg:pr-0 lg:w-[420px] lg:line-clamp-3 xl:w-[290px] xl:line-clamp-none xl:text-xs">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+            <span class="w-40 h-16 bg-white flex justify-center items-center gap-2">
               <p class="text-xs">ВЗГЛЯНУТЬ</p>
               <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
             </span>
