--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         
         <span class="w-[28%] h-[9%] bg-white flex justify-center items-center gap-2 absolute bottom-0 left-0">
           <p class="text-xs">ВЗГЛЯНУТЬ</p>
-          <img src="/assets/Icons/arrow-2-right-long.svg" alt="">
+          <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow">
         </span>
       </div>
   
