--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <div class="flex md:justify-between bg-pink-300">
 
-      <div class="flex flex-wrap md:flex-nowrap md:w-2/ -[413px] h-[144px] gap-4">
+      <div class="flex flex-wrap md:flex-nowrap md:w-2/ w-[413px] h-[144px] gap-4">
 
         <div class="w- flex">
           <img src="/assets/Images/1.svg" alt="1" class="w-full h-auto">
@@ -163,7 +163,7 @@
 
       </div>
       
-      <div class="flex flex-wrap md:flex-nowrap md:w-2/ -[570px] h-[144px] gap-4">
+      <div class="flex flex-wrap md:flex-nowrap md:w-2/ w-[570px] h-[144px] gap-4">
 
         <div class=" w-1/ flex">
           <img src="/assets/Images/2.svg" alt="2" class="w-full h-auto">
