--- a/index.html
+++ b/index.html
@@ -142,35 +142,35 @@
   </div>
 
   <!-- section-3 -->
-  <div class="mt-28 ml-44 mr-12 mx-auto">
-    <h1 class="mb-14 font-light text-6xl leading-10 text-[rgba(189,189,189,1)]">
+  <div class="mt-28 lg:ml-24 xl:ml-44 mr-12 mx-auto">
+    <h1 class="mb-16 max-lg:px-6 font-light text-4xl md:text-5xl leading-10 text-[rgba(189,189,189,1)]">
       Основные задачи
     </h1>
 
-    <div class="flex md:justify-between bg-pink-300">
+    <div class="flex flex-wrap max-lg:px-6 gap-8 md:justify-between">
 
-      <div class="flex flex-wrap md:flex-nowrap md:w-2/ w-[413px] h-[144px] gap-4">
+      <div class="flex md:flex-nowrap gap-5 lg:gap-8">
 
-        <div class="w- flex">
+        <div class="flex">
           <img src="/assets/Images/1.svg" alt="1" class="w-full h-auto">
         </div>
 
-        <div class="flex w- w-[279px] h-[144px] font-[400px] text-[22px] leading-[36px]">
-          <p class="bg-purple-100 ">
+        <div class="flex pl-6 sm:pl-9 mid:pl-0 lg:pl-0 w-[165px] sm:w-[200px] lg:w-[165px] xl:w-[279px] xl:font-[400px] xl:text-[22px] xl:leading-[36px]">
+          <p>
             Создание комфортных условий и повышение качества обслуживания клиентов
           </p>
         </div>
 
       </div>
       
-      <div class="flex flex-wrap md:flex-nowrap md:w-2/ w-[570px] h-[144px] gap-4">
+      <div class="flex md:flex-nowrap gap-5 lg:gap-8 ">
 
-        <div class=" w-1/ flex">
+        <div class="flex">
           <img src="/assets/Images/2.svg" alt="2" class="w-full h-auto">
         </div>
 
-        <div class="flex w-4/ w-[430px] h-[144px] font-[400px] text-[22px] leading-[36px]">
-          <p class="bg-purple-100 ">
+        <div class="flex w-[240px] xl:w-[430px] xl:font-[400px] xl:text-[22px] xl:leading-[36px]">
+          <p>
             Постоянно совершенствовать качество предоставляемых услуг путем обучения персонала, закупки нового оборудования и усиленной рекламы на рынке
           </p>
         </div>
