--- a/index.html
+++ b/index.html
@@ -181,6 +181,54 @@
 
   </div>
   
+  <!-- section-4 -->
+   <div class="mt-14 px-6">
+      <h1 class="text-[rgba(189,189,189,1)] font-light text-4xl mb-10">
+        Наши проекты
+      </h1>
+
+      <div class="grid md:grid-rows-2 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-[5.55fr_5.55fr] gap-6">
+
+          <div class="bg-[url('/assets/Images/pg1-g1.png')] bg-cover bg-center" alt="imgG2">
+            <div class="w-[570px] h-[255px] flex flex-col justify-center items-center bg-[rgba(51,51,51,0.7)]  text-white">
+              <h1 class="w-[413px] h-[128px] font-[700px] text-[64px] leading-[64px]">
+                ДОСУГОВЫЙ ЦЕНТР
+              </h1>
+              <span class="flex self-start ml-20 gap-3">
+                ПОДРОБНЕЕ
+                <img src="/assets/Icons/arrow-2-right-long-white.svg" alt="arrow-right">
+              </span>
+            </div>
+          </div>
+
+          <img class="w-full h-full" src="/assets/Images/pg1-g2.png" alt="imgG2"/>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-[2.7fr_4.7fr_3.7fr] gap-6">
+          <img class="w-full h-full" src="/assets/Images/pg1-g3.png" alt="imgG3"/>
+          <img class="w-full h-full" src="/assets/Images/pg1-g4.png" alt="imgG4"/>
+          <img class="w-full h-full" src="/assets/Images/pg1-g5.png" alt="imgG5"/>
+        </div>
+      </div>
+      
+      <span class="w-52 h-16 mt-6 justify-self-end bg-[rgba(51,51,51,1)] flex justify-center items-center gap-2">
+        <p class="text-xs text-white">ВСЕ ПРОЕКТЫ</p>
+        <img src="/assets/Icons/arrow-2-right-long-white.svg" alt="arrow-left">
+      </span>
+
+   </div>
+   
+  
+  
+  
+  
+
+
+
+
+
+
        
 
 
