--- a/index.html
+++ b/index.html
@@ -221,6 +221,25 @@
       </span>
 
    </div>
+
+   <!-- section-5 -->
+    <div>
+      <h1 class="text-[rgba(189,189,189,1)] text-4xl">
+        Связаться с нами
+      </h1>
+
+      <form>
+        
+        <input type="text" placeholder="Имя" required/>
+        <input type="tel" placeholder="Номер телефона*" required/>
+        <input type="email" placeholder="E-mail*" required/>
+        <input type="text" placeholder="Интересующий товар/услуга">
+        <textarea placeholder="Сообщение" required></textarea>
+        <button type="submit">ОТПРАВИТЬ</button>
+
+      </form>
+
+    </div>
    
   
   
