--- a/index.html
+++ b/index.html
@@ -224,22 +224,43 @@
 
    <!-- section-5 -->
     <div>
-      <h1 class="text-[rgba(189,189,189,1)] text-4xl">
+
+      <h1 class="text-[rgba(189,189,189,1)] text-4xl mb-16">
         Связаться с нами
       </h1>
 
-      <form>
-        
-        <input type="text" placeholder="Имя" required/>
-        <input type="tel" placeholder="Номер телефона*" required/>
-        <input type="email" placeholder="E-mail*" required/>
-        <input type="text" placeholder="Интересующий товар/услуга">
-        <textarea placeholder="Сообщение" required></textarea>
-        <button type="submit">ОТПРАВИТЬ</button>
+      <div class="grid md:flex gap-5">
 
-      </form>
+        <form class="space-y-3 max-w-md">
+      
+          <input class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " type="text" placeholder="Имя" required/>
+          <input class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " type="tel" placeholder="Номер телефона*" required/>
+          <input class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " type="email" placeholder="E-mail*" required/>
+          <input class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " type="text" placeholder="Интересующий товар/услуга">
+          <textarea class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " placeholder="Сообщение" rows="6" required></textarea>
+
+          <div class="flex items-center">
+            <input type="checkbox"  class="mr-2">
+            <label for="agree" class="text-sm">Отправляя заявку Вы соглашаетесь с политикой конфиденциальности</label>
+          </div>
+
+          <button class="w-52 h-16 mt-6 bg-[rgba(51,51,51,1)] flex justify-center items-center gap-2">
+            <p class="text-xs text-white">ОТПРАВИТЬ</p>
+            <img src="/assets/Icons/arrow-2-right-long-white.svg" alt="arrow-left">
+          </button>
+
+        </form>
+
+        <div class="flex flex-col justify-center items-center">
+          <img class="" src="/assets/Images/pg1-form_img.png" alt="image">
+        </div>
 
     </div>
+
+  </div>
+
+
+   
    
   
   
