--- a/index.html
+++ b/index.html
@@ -223,15 +223,15 @@
    </div>
 
    <!-- section-5 -->
-    <div>
+    <div class="px-6 lg:ml-24 lg:mr-12 xl:ml-44">
 
-      <h1 class="text-[rgba(189,189,189,1)] text-4xl mb-16">
+      <h1 class="text-[rgba(189,189,189,1)] text-5xl md:text-6xl lg:text-7xl mb-16">
         Связаться с нами
       </h1>
 
-      <div class="grid md:flex gap-5">
+      <div class="max-md:space-y-8 md:flex gap-8">
 
-        <form class="space-y-3 max-w-md">
+        <form class="space-y-5 max-w-md max-md:mx-auto">
       
           <input class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " type="text" placeholder="Имя" required/>
           <input class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " type="tel" placeholder="Номер телефона*" required/>
@@ -239,7 +239,7 @@
           <input class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " type="text" placeholder="Интересующий товар/услуга">
           <textarea class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:border-[rgba(51,51,51,1)] " placeholder="Сообщение" rows="6" required></textarea>
 
-          <div class="flex items-center">
+          <div class="w-full flex items-center">
             <input type="checkbox"  class="mr-2">
             <label for="agree" class="text-sm">Отправляя заявку Вы соглашаетесь с политикой конфиденциальности</label>
           </div>
@@ -250,17 +250,19 @@
           </button>
 
         </form>
-
-        <div class="flex flex-col justify-center items-center">
-          <img class="" src="/assets/Images/pg1-form_img.png" alt="image">
+<!-- img in div to maintain height-->
+        <div>
+          <img class="w-full h-[74%]" src="/assets/Images/pg1-form_img.png" alt="image">
         </div>
 
-    </div>
+      </div>
 
-  </div>
+   </div>
+
 
 
    
+
    
   
   
