--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
       </div>
 
       <div class="hidden sm:flex items-center sm:pt-9 sm:pb-9 md:pt-14 md:pb-14 lg:pt-20 lg:pb-20 sm:gap-4 xl:gap-5 ">
-        <button class="bg-white w-10 h-10 border flex items-center justify-center">
+        <button class="bg-white w-10 h-10 border flex items-center justify-center hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">
           <img src="/assets/Icons/arrow-2-left-long.svg" alt="arrow-left" class="w-4">
         </button>
-        <button class="bg-slate-50 w-10 h-10 border flex items-center justify-center">
+        <button class="bg-slate-50 w-10 h-10 border flex items-center justify-center hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">
           <img src="/assets/Icons/arrow-2-right-long.svg"  alt="arrow-right" class="w-4">
         </button>
         <span class="h-2 bg-slate-200"></span>
       </div>
 
       <div class="hidden sm:flex items-center space-x-5 text-lg text-gray-300"> 
-        <span>01</span> 
+        <span class="hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">01</span> 
         <img src="/assets/Icons/Line 3.svg" alt="" class="w-6"> 
-        <span>02</span> 
+        <span class="hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">02</span> 
       </div>
 
      </div>
@@ -87,7 +87,7 @@
       <div class="relative">
         <img src="/assets/Images/big-image.png" alt="big-Image" class="w-full"> 
         
-        <button class="w-[28%] h-[9%] bg-white flex justify-center items-center gap-2 absolute bottom-0 left-0 hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
+        <button class="w-[28%] h-[9%] bg-white flex justify-center items-center gap-2 absolute bottom-0 left-0 hover:cursor-pointer hover:bg-[rgb(83,82,82)] ">
           <p class="text-xs">ВЗГЛЯНУТЬ</p>
           <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow">
         </button>
@@ -240,7 +240,7 @@
           <textarea class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 text-sm focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" placeholder="Сообщение*" rows="6" required></textarea>
 
           <div class="w-full flex items-center">
-            <input type="checkbox"  class="mr-2">
+            <input type="checkbox"  class="mr-2 bg-[rgba(51,51,51,1)]">
             <label for="agree" class="text-sm">Отправляя заявку Вы соглашаетесь с политикой конфиденциальности</label>
           </div>
 
@@ -259,6 +259,10 @@
 
    </div>
 
+   <!-- section-6 -->
+    <div class="">
+      
+    </div>
 
 
    
