--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     
     <!-- section-2 -->
-  <div class="bg-gray-100 mt-20 pt-8 lg:ml-24 lg:mr-12 lg:h-[300px] xl:ml-44 xl:h-[400px] mx-auto">
+  <div class="bg-gray-100 mt-20 pt-8 lg:ml-24 lg:mr-12 xl:ml-44 mx-auto">
 
     <div class="pt-5 pb-4 sm:pt-0 sm:pb-0 lg:mr-12 mx-auto">
  
@@ -182,8 +182,8 @@
   </div>
   
   <!-- section-4 -->
-   <div class="mt-14 px-6 lg:ml-24 lg:mr-12 xl:ml-44">
-      <h1 class="text-[rgba(189,189,189,1)] font-light text-4xl mb-10">
+   <div class="mt-20 px-6 lg:ml-24 lg:mr-12 xl:ml-44">
+      <h1 class="text-[rgba(189,189,189,1)] font-light text-7xl mb-16">
         Наши проекты
       </h1>
 
@@ -223,7 +223,7 @@
    </div>
 
    <!-- section-5 -->
-    <div class="px-6 lg:ml-24 lg:mr-12 xl:ml-44">
+    <div class="px-6 mt-20 lg:ml-24 lg:mr-12 xl:ml-44">
 
       <h1 class="text-[rgba(189,189,189,1)] text-5xl md:text-6xl lg:text-7xl mb-16">
         Связаться с нами
@@ -311,7 +311,7 @@
       </div>
 
       <div class="h-24 border-t-2 border-[rgba(200,200,200,0.5)] flex justify-center items-center">
-        <p class="lg:pl-36 text-[rgba(200,200,200,0.5)]">
+        <p class="text-sm lg:pl-48 text-[rgba(200,200,200,0.5)]">
           © 2019 Digital Project. Все права защищены.
         </p>
       </div>
