--- a/index2.html
+++ b/index2.html
@@ -210,5 +210,18 @@
         
     </footer>
 
+    <!-- JavaScript -->
+  <script>
+    document.getElementById('menuButton').addEventListener('click', function() {
+    const menu = document.getElementById('mobileMenu');
+    menu.style.display='flex';
+    });
+
+    document.getElementById('closeButton').addEventListener('click', function() {
+    const menu = document.getElementById('mobileMenu');
+    menu.style.display='none';
+    });
+</script>
+
 </body>
 </html>
