--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page-2</title>
+    <title>ГАЛЕРЕ</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/f7b7c37647.js" crossorigin="anonymous"></script>
 </head>
@@ -129,13 +129,13 @@
             </div>
 
         </div>
-
+<!-- pagination -->
         <div class="mt-5 flex items-center gap-5">
 
-            <div class="flex justify-center space-x-5 text-lg text-gray-300"> 
-                <span>01</span> 
-                <img src="/assets/Icons/Line 3.svg" alt="" class="w-6 h-6"> 
-                <span>02</span> 
+            <div class="flex justify-center space-x-5 text-lg"> 
+                <span class="text-black">01</span> 
+                <img src="/assets/Icons/Line 3.svg" alt="/" class="w-6 h-6"> 
+                <span class="text-gray-300">05</span> 
             </div>
 
             <div class="flex justify-center space-x-5 mt-4 mb-4">
