--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architects Website</title>
+    <title>ГЛАВНАЯ</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/f7b7c37647.js" crossorigin="anonymous"></script>
 </head>
@@ -66,6 +66,7 @@
         <h1 class="text-left text-[rgba(51,51,51,1)]">NURTOWN</h1> 
       </div>
 
+      <!-- pagination -->
       <div class="hidden sm:flex items-center sm:pt-9 sm:pb-9 md:pt-14 md:pb-14 lg:pt-20 lg:pb-20 sm:gap-4 xl:gap-5 ">
         <button class="bg-white w-10 h-10 border flex items-center justify-center hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">
           <img src="/assets/Icons/arrow-2-left-long.svg" alt="arrow-left" class="w-4">
@@ -94,7 +95,7 @@
       </div>
   
     </div> 
-    
+    <!-- pagination for mobile -->
     <div class="sm:hidden flex justify-center space-x-5 mt-4 mb-4">
       <button class="bg-white w-10 h-10 border flex items-center justify-center">
         <img src="/assets/Icons/arrow-2-left-long.svg" alt="arrow-left" class="w-4">
