--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ГАЛЕРЕ</title>
+    <title>ПРОЕКТЫ</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/f7b7c37647.js" crossorigin="anonymous"></script>
 </head>
@@ -211,17 +211,17 @@
     </footer>
 
     <!-- JavaScript -->
-  <script>
-    document.getElementById('menuButton').addEventListener('click', function() {
-    const menu = document.getElementById('mobileMenu');
-    menu.style.display='flex';
-    });
+    <script>
+        document.getElementById('menuButton').addEventListener('click', function() {
+        const menu = document.getElementById('mobileMenu');
+        menu.style.display='flex';
+        });
 
-    document.getElementById('closeButton').addEventListener('click', function() {
-    const menu = document.getElementById('mobileMenu');
-    menu.style.display='none';
-    });
-</script>
+        document.getElementById('closeButton').addEventListener('click', function() {
+        const menu = document.getElementById('mobileMenu');
+        menu.style.display='none';
+        });
+    </script>
 
 </body>
 </html>
