--- a/index2.html
+++ b/index2.html
@@ -78,8 +78,8 @@
                     <p class="md:max-xl:line-clamp-4 md:max-w-[370px] xl:min-w-[400px] mt-2 md:mt-4 xl:mt-10">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
-                    <button class="w-52 h-16 bg-white flex justify-center items-center gap-2 mt-auto hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
-                        <p class="text-xs">СМОТРЕТЬ</p>
+                    <button class="w-52 h-16 bg-white flex justify-center items-center gap-2 text-xs mt-auto hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
+                        СМОТРЕТЬ
                         <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
                     </button>
                 </div>
@@ -99,8 +99,8 @@
                     <p class="md:max-xl:line-clamp-4 md:max-w-[370px] xl:min-w-[400px] mt-2 md:mt-4 xl:mt-10">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
-                    <button class="w-52 h-16 bg-white flex justify-center items-center gap-2 mt-auto hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
-                        <p class="text-xs">СМОТРЕТЬ</p>
+                    <button class="w-52 h-16 bg-white flex justify-center items-center gap-2 text-xs mt-auto hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
+                        СМОТРЕТЬ
                         <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
                     </button>
                 </div>
@@ -120,8 +120,8 @@
                     <p class="md:max-xl:line-clamp-4 md:max-w-[370px] xl:min-w-[400px] mt-2 md:mt-4 xl:mt-10">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
-                    <button class="w-52 h-16 bg-white flex justify-center items-center gap-2 mt-auto hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
-                        <p class="text-xs">СМОТРЕТЬ</p>
+                    <button class="w-52 h-16 bg-white flex justify-center items-center gap-2 text-xs mt-auto hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
+                        СМОТРЕТЬ
                         <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
                     </button>
                 </div>
