--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
       <div class="relative">
         <img src="/assets/Images/big-image.png" alt="big-Image" class="w-full"> 
         
-        <button class="w-[28%] h-[9%] bg-white flex justify-center items-center gap-2 absolute bottom-0 left-0 hover:cursor-pointer hover:bg-[rgb(83,82,82)] ">
-          <p class="text-xs">ВЗГЛЯНУТЬ</p>
+        <button class="w-[28%] h-[9%] bg-white flex justify-center items-center gap-2 absolute bottom-0 left-0 text-xs  hover:bg-[rgb(83,82,82)] ">
+          ВЗГЛЯНУТЬ
           <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow">
         </button>
       </div>
@@ -130,8 +130,8 @@
             <p class=" font-[300px] text-[16px] leading-[25px] md:max-lg:leading-loose mt-4 mb-4 xl:mt-6 xl:mb-6 md:max-lg:h-3/4 sm:line-clamp-6 md:pr-7 md:line-clamp-none lg:pr-0 lg:w-[420px] lg:line-clamp-4 xl:line-clamp-none xl:max-2xl:line-clamp-4 xl:w-full xl:text-xl">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             </p>
-            <button class="w-52 h-16 bg-white flex justify-center items-center gap-2 hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
-              <p class="text-xs">ЧИТАТЬ</p>
+            <button class="w-52 h-16 bg-white flex justify-center items-center gap-2 text-xs hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
+              ЧИТАТЬ
               <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
             </button>
 
@@ -202,7 +202,7 @@
               <h1 class="font-[700px] text-[64px] md:max-xl:text-5xl leading-[64px] ">
                 ДОСУГОВЫЙ ЦЕНТР
               </h1>
-              <button class="flex gap-3 mt-3 hover:cursor-pointer text-white text-opacity-70">
+              <button class="flex gap-3 mt-3 text-white text-opacity-70">
                 ПОДРОБНЕЕ
                 <img  src="/assets/Icons/arrow-2-right-long-white.svg" alt="arrow-right">
               </button>
@@ -220,8 +220,8 @@
 
       </div>
       
-      <button class="w-52 h-16 mt-6 justify-self-end bg-[rgba(51,51,51,1)] flex justify-center items-center gap-2 hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
-        <p class="text-xs text-white text-opacity-70">ВСЕ ПРОЕКТЫ</p>
+      <button class="w-52 h-16 mt-6 justify-self-end bg-[rgba(51,51,51,1)] flex justify-center items-center gap-2 text-xs text-white text-opacity-70 hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
+        ВСЕ ПРОЕКТЫ
         <img src="/assets/Icons/arrow-2-right-long-white.svg" alt="arrow-left">
       </button>
 
@@ -249,8 +249,8 @@
             <label for="agree" class="text-sm">Отправляя заявку Вы соглашаетесь с политикой конфиденциальности</label>
           </div>
 
-          <button class="w-52 h-16 mt-6 bg-[rgba(51,51,51,1)] flex justify-center items-center gap-2 hover:cursor-pointer hover:bg-[rgb(83,82,82)]">
-            <p class="text-xs text-white text-opacity-70">ОТПРАВИТЬ</p>
+          <button class="w-52 h-16 mt-6 bg-[rgba(51,51,51,1)] flex justify-center items-center gap-2 text-xs text-white text-opacity-70 hover:bg-[rgb(83,82,82)]">
+            ОТПРАВИТЬ
             <img src="/assets/Icons/arrow-2-right-long-white.svg" alt="arrow-left">
           </button>
 
