feat n fix_style

--- a/formlink.html
+++ b/formlink.html
@@ -9,9 +9,9 @@
 <body>
     <div class="h-screen mx-auto flex flex-col justify-center items-center">
         <div class="max-sm:px-6 max-sm:min-w-80 max-w-lg mx-auto flex flex-col justify-center items-center gap-6">
-            <div class="h-48 w-48 bg-transparent  border-purple-300 flex justify-center items-center">
-                <div class="h-40 w-40 flex justify-center items-center border-2 border-gray-200 rounded-full">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white h-24 w-24 rounded-full p-4 bg-[rgba(13,195,50,1)]">
+            <div class="h-48 w-48 bg-transparent flex justify-center items-center rounded-full hover:shadow-xl">
+                <div class="h-40 w-40 flex justify-center items-center border-2 border-gray-200 rounded-full hover:bg-[rgba(13,195,50,1)]">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white h-24 w-24 rounded-full p-4 bg-[rgba(13,195,50,1)] hover:text-[rgba(13,195,50,1)]  hover:bg-white">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
                     </svg>
                 </div>              
