--- a/index4.html
+++ b/index4.html
@@ -72,7 +72,7 @@
                 </span>
                 <p class="text-[rgba(51,51,51,1)] font-bold xl:text-xl">+7 (701) 77 76 811</p> 
                 <p class="text-[rgba(189,189,189,1)] xl:text-xl">Galym.sultanov@mail.ru</p>
-                <a href="index.html" class="w-52 h-16 bg-[rgba(51,51,51,1)] flex justify-center items-center hover:bg-[rgb(83,82,82)] text-white text-opacity-70">Орабтная связь</a>           
+                <a href="/form.html" target="_blank" class="w-52 h-16 bg-[rgba(51,51,51,1)] flex justify-center items-center hover:bg-[rgb(83,82,82)] text-white text-opacity-70">Орабтная связь</a>           
             </div>
 
             <div>
