linespan/checkmark/fixing

--- a/index1.html
+++ b/index1.html
@@ -55,6 +55,7 @@
    
   </nav>
 
+  <!-- gallery-section -->
   <section class="mt-20 px-8 sm:pl-10 md:pl-16 lg:pl-0 lg:ml-24  xl:ml-44 mx-auto">
         
       <div class="mb-10">
@@ -91,16 +92,16 @@
     <div class="mt-10 flex items-center gap-5">
 
       <div class="flex justify-center space-x-5 text-lg"> 
-          <span class="text-black">01</span> 
+          <span class="text-black hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">01</span> 
           <img src="/assets/Icons/Line 3.svg" alt="/" class="w-6 h-6"> 
-          <span class="text-gray-300">05</span> 
+          <span class="text-gray-300 hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">05</span> 
       </div>
 
       <div class="flex justify-center space-x-5 mt-4 mb-4">
-          <button class="bg-white w-8 h-8 border flex items-center justify-center">
+          <button class="bg-white w-8 h-8 border flex items-center justify-center hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">
           <img src="/assets/Icons/arrow-2-left-long.svg" alt="arrow-left" class="w-4">
           </button>
-          <button class="bg-slate-50 w-8 h-8 border flex items-center justify-center">
+          <button class="bg-slate-50 w-8 h-8 border flex items-center justify-center hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">
           <img src="/assets/Icons/arrow-2-right-long.svg"  alt="arrow-right" class="w-4">
           </button>
       </div>
