--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,7 @@
    
     </nav>
 
-     <!-- section-1 -->
+     <!--block-section -->
     <section class="mt-20 px-8 sm:pl-10 md:pl-16 lg:pl-0 lg:ml-24  xl:ml-44 mx-auto">
         
         <div class="mb-10">
