--- a/index4.html
+++ b/index4.html
@@ -55,9 +55,9 @@
    
     </nav>
 
+    <!-- location-section -->
     <section class="mt-20 px-8 sm:pl-10 md:pl-16 lg:pl-0 lg:ml-24  xl:ml-44 mx-auto">
 
-        <!-- <div  class="grid grid-cols-1 sm:grid-cols-2 bg-slate-300"> -->
         <div  class="flex max-lg:flex-wrap gap-10">
 
             <div class="flex flex-col justify-end lg:max-xl:justify-between lg:max-xl:gap-0 max-md:gap-7 gap-9"> 
