--- a/formlink.html
+++ b/formlink.html
@@ -19,7 +19,7 @@
 
             <h1 class="font-bold text-3xl">Спасибо !</h1>
             <p class="text-center text-xl font-semibold my-5">Ваше сообщение отправлено мы свяжемся с вами в ближайшее время</p>
-            <button class="w-full h-12 p-2 mt-2 bg-[rgba(51,51,51,1)] flex justify-center items-center hover:bg-[rgb(83,82,82)] text-white text-opacity-70">ВЕРНУТСЯ НАЗАД</button>
+            <a href="/form.html" class="w-full h-12 p-2 mt-2 bg-[rgba(51,51,51,1)] flex justify-center items-center hover:bg-[rgb(83,82,82)] text-white text-opacity-70">ВЕРНУТСЯ НАЗАД</a>
         </div> 
     </div>
 </body>
