--- a/index2.html
+++ b/index2.html
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="bg-slate-50 max-md:space-y-4 max-md:py-3 flex flex-col justify-start md:p-4 md-[400px] xl:w-[500px] xl:p-8">
-                    <h2 class="text-[rgba(189,189,189,1)] text-4xl md:text-2xl lg:text-4xl xl:text-[40px] xl:leadibg-[49.8px]">
+                    <h2 class="text-[rgba(189,189,189,1)] max-sm:text-3xl text-4xl md:text-2xl lg:text-4xl xl:text-[40px] xl:leadibg-[49.8px]">
                         Общеобразовательная школа
                     </h2>
                     <p class="md:max-xl:line-clamp-4 md:max-w-[370px] xl:min-w-[400px] mt-2 md:mt-4 xl:mt-10">
@@ -82,6 +82,8 @@
                         СМОТРЕТЬ
                         <img src="/assets/Icons/arrow-2-right-long.svg" alt="arrow-left">
                     </button>
+
+                    
                 </div>
                 
             </div>
@@ -133,16 +135,16 @@
         <div class="mt-5 flex items-center gap-5">
 
             <div class="flex justify-center space-x-5 text-lg"> 
-                <span class="text-black">01</span> 
+                <span class="text-black hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">01</span> 
                 <img src="/assets/Icons/Line 3.svg" alt="/" class="w-6 h-6"> 
-                <span class="text-gray-300">05</span> 
+                <span class="text-gray-300 hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">05</span> 
             </div>
 
             <div class="flex justify-center space-x-5 mt-4 mb-4">
-                <button class="bg-white w-8 h-8 border flex items-center justify-center">
+                <button class="bg-white w-8 h-8 border flex items-center justify-center hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">
                 <img src="/assets/Icons/arrow-2-left-long.svg" alt="arrow-left" class="w-4">
                 </button>
-                <button class="bg-slate-50 w-8 h-8 border flex items-center justify-center">
+                <button class="bg-slate-50 w-8 h-8 border flex items-center justify-center hover:ring-2 hover:ring-[rgb(83,82,82)] focus:border-[rgba(51,51,51,1)]">
                 <img src="/assets/Icons/arrow-2-right-long.svg"  alt="arrow-right" class="w-4">
                 </button>
             </div>
