--- a/form.html
+++ b/form.html
@@ -15,10 +15,24 @@
             <h1 class="mb-3 text-center text-3xl font-bold">Задать вопрос</h1>
         
             <input class="w-full bg-[rgba(243,243,243,1)] outline-none border mb-3 px-3 py-3 focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" type="text" placeholder="Имя" maxlength="30" required/>
-            <input class="w-full bg-[rgba(243,243,243,1)] outline-none border mb-3 px-3 py-3 focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" type="tel" placeholder="Номер телефона*" maxlength="11" required/>
-            <input class="w-full bg-[rgba(243,243,243,1)] outline-none border mb-3 px-3 py-3 focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" type="email" placeholder="E-mail*" required/>
+
+            <div class="relative">
+                <input class="w-full bg-[rgba(243,243,243,1)] outline-none border mb-3 px-3 py-3 focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" type="tel" placeholder="Номер телефона" maxlength="
+                11" required/>
+                <span class=" text-red-700 absolute top-3 left-[137px]">*</span>
+            </div>
+
+            <div class="relative">
+                <input class="relative w-full bg-[rgba(243,243,243,1)] outline-none border mb-3 px-3 py-3 focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" type="email" placeholder="E-mail" required/>
+                <span class=" text-red-700 absolute top-3 left-[58px]">*</span>
+            </div>
+
             <input class="w-full bg-[rgba(243,243,243,1)] outline-none border mb-3 px-3 py-3 focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" type="text" placeholder="Интересующий товар/услуга">
-            <textarea class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" placeholder="Сообщение*" rows="6" required></textarea>
+
+            <div class="relative">
+                <textarea class="w-full bg-[rgba(243,243,243,1)] outline-none border px-3 py-3 focus:ring-[rgba(51,51,51,1)] focus:ring-2 hover:cursor-pointer" placeholder="Сообщение" rows="6" required></textarea>
+                <span class=" text-red-700 absolute top-3 left-[100px]">*</span>
+            </div>
   
             <div class="w-full mb-5 flex items-start gap-3">
                 <i class="fa-solid fa-check w-[42px] h-[30px] bg-[rgba(243,243,243,1)] flex justify-center items-center"></i>
