--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
         <div class="grid grid-cols-1 md:grid-cols-[5.55fr_5.55fr] gap-6">
           <div class="relative bg-[rgba(51,51,51,0.7)]">
             <img class="w-full h-full mix-blend-multiply" src="/assets/Images/pg1-g1.png" alt="arrow-right">
-            <div class="absolute left-14 top-7 sm:left-24 sm:top-14 md:left-10 md:top-6 lg:left-14 lg:top-10 xl:left-20 xl:top-12 2xl:left-32 2xl:top-16 w-[413px] h-[160px] text-white">
-              <h1 class="max-lg:text-5xl md:max-xl:text-5xl font-bold text-[64px] leading-[64px]">
+            <div class="absolute max-sm:inset-0 sm:left-24 sm:top-14 md:left-10 md:top-6 lg:left-14 lg:top-10 xl:left-20 xl:top-12 2xl:left-32 2xl:top-16 w-[413px] h-[160px] text-white">
+              <h1 class="max-xl:text-5xl font-bold text-[64px] leading-[64px]">
                 ДОСУГОВЫЙ ЦЕНТР
               </h1>
               <button class="flex gap-3 mt-3 text-white text-opacity-70 hover:bg-[rgb(83,82,82)]">
